--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
+    <uses-feature android:name="android.hardware.telephony" android:required="true" />
+
     <queries>
         <intent>
             <action android:name="android.intent.action.PICK" />
