--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,19 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.example.smsrouter'
-    compileSdk 33
+    namespace 'com.github.emresarincioglu.smsrouter'
+    compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.smsrouter"
-        minSdk 23
+        applicationId "com.github.emresarincioglu.smsrouter"
+        minSdk 26
         targetSdk 33
-        versionCode 1
-        versionName "1.0.3"
+        versionCode 2
+        versionName "2.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -23,8 +25,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     buildFeatures {
@@ -34,11 +36,20 @@ android {
 
 dependencies {
 
+    def nav_version = "2.7.4"
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation project(":feature:home")
+    implementation project(":core:designsystem")
 }
