--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        def nav_version = libs.versions.navigation.get()
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
+}
+
 plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
     alias libs.plugins.kotlin.android apply false
     alias libs.plugins.kotlin.kapt apply false
     alias libs.plugins.hilt.android apply false
+    alias libs.plugins.navigation.safeargs.kotlin apply false
 }
